[gd_scene format=3 uid="uid://dvlyhuf4uyjqv"]

[ext_resource type="Script" uid="uid://c0a6wcij7il45" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dw2e4e8f2hrcl" path="res://assets/kenney_platformercharacters/PNG/Female/female_tilesheet.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://7vg2j1865jam" path="res://assets/kenney_platformercharacters/PNG/Female/Poses/female_idle.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://ckavd12djpprg" path="res://assets/kenney_platformercharacters/PNG/Female/Poses/female_duck.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dsdlgggvwlbt5" path="res://assets/kenney_platformercharacters/PNG/Female/Poses/female_jump.png" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://btcds8l8o3byi" path="res://assets/kenney_platformercharacters/PNG/Female/Poses/female_walk1.png" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://c2lyfbcvwinlh" path="res://assets/kenney_platformercharacters/PNG/Female/Poses/female_back.png" id="6_fjrip"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fulsm"]
animation = &"climb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4r5pv"]
animation = &"climb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_60mlk"]
animation = &"climb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i4ail"]
animation = &"climb"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qfm1y"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fulsm")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4r5pv")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_60mlk")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_i4ail")
blend_point_3/pos = Vector2(0, -0.90000004)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f1ej7"]
animation = &"crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oprun"]
animation = &"crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a8ls1"]
animation = &"crouch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qfm1y"]
animation = &"crouch"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fjrip"]
blend_point_0/node = SubResource("AnimationNodeAnimation_f1ej7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_oprun")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_a8ls1")
blend_point_2/pos = Vector2(0, -0.90000004)
blend_point_3/node = SubResource("AnimationNodeAnimation_qfm1y")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g2els"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qhqgy"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dqkch"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qlg0r"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_g2els"]
blend_point_0/node = SubResource("AnimationNodeAnimation_g2els")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_qhqgy")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_dqkch")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_qlg0r")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tuyoq"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fjrip"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_smehm"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ur7pv"]
animation = &"jump"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qhqgy"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tuyoq")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_fjrip")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_smehm")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ur7pv")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a38lo"]
animation = &"preclimb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ni07"]
animation = &"preclimb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l71n6"]
animation = &"preclimb"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ke2ow"]
animation = &"preclimb"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_3v2ag"]
blend_point_0/node = SubResource("AnimationNodeAnimation_a38lo")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4ni07")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_l71n6")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ke2ow")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4r1p"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d2wvv"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3v2ag"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jej6c"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dqkch"]
blend_point_0/node = SubResource("AnimationNodeAnimation_y4r1p")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_d2wvv")
blend_point_1/pos = Vector2(0, -0.90000004)
blend_point_2/node = SubResource("AnimationNodeAnimation_3v2ag")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_jej6c")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qlg0r"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tuyoq"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fjrip"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_smehm"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ur7pv"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y4r1p"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g2els"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d2wvv"]
advance_mode = 2
advance_condition = &"crouch"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3v2ag"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jej6c"]
advance_mode = 2
advance_condition = &"crouch"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f1ej7"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oprun"]
advance_mode = 2
advance_condition = &"preclimb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a8ls1"]
advance_mode = 2
advance_condition = &"preclimb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qfm1y"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fulsm"]
advance_mode = 2
advance_condition = &"preclimb"
advance_expression = "preclimb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4r5pv"]
advance_mode = 2
advance_condition = &"climb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_60mlk"]
advance_mode = 2
advance_condition = &"preclimb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ni07"]
advance_mode = 2
advance_condition = &"climb"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l71n6"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i4ail"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a38lo"]
advance_mode = 2
advance_condition = &"preclimb"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_g2els"]
states/End/position = Vector2(839.2, 99.95443)
states/climb/node = SubResource("AnimationNodeBlendSpace2D_qfm1y")
states/climb/position = Vector2(634, 192.58054)
states/crouch/node = SubResource("AnimationNodeBlendSpace2D_fjrip")
states/crouch/position = Vector2(448.24002, 208)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_g2els")
states/idle/position = Vector2(365.2, 100.16)
states/jump/node = SubResource("AnimationNodeBlendSpace2D_qhqgy")
states/jump/position = Vector2(449.2, 25.6)
states/preclimb/node = SubResource("AnimationNodeBlendSpace2D_3v2ag")
states/preclimb/position = Vector2(694.8, 99.93368)
states/run/node = SubResource("AnimationNodeBlendSpace2D_dqkch")
states/run/position = Vector2(514.8, 100.308495)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_qlg0r"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_tuyoq"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_fjrip"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_smehm"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_ur7pv"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_y4r1p"), "jump", "run", SubResource("AnimationNodeStateMachineTransition_g2els"), "idle", "crouch", SubResource("AnimationNodeStateMachineTransition_d2wvv"), "crouch", "idle", SubResource("AnimationNodeStateMachineTransition_3v2ag"), "run", "crouch", SubResource("AnimationNodeStateMachineTransition_jej6c"), "crouch", "run", SubResource("AnimationNodeStateMachineTransition_f1ej7"), "idle", "preclimb", SubResource("AnimationNodeStateMachineTransition_oprun"), "jump", "preclimb", SubResource("AnimationNodeStateMachineTransition_a8ls1"), "preclimb", "jump", SubResource("AnimationNodeStateMachineTransition_qfm1y"), "crouch", "preclimb", SubResource("AnimationNodeStateMachineTransition_fulsm"), "preclimb", "climb", SubResource("AnimationNodeStateMachineTransition_4r5pv"), "climb", "preclimb", SubResource("AnimationNodeStateMachineTransition_60mlk"), "run", "climb", SubResource("AnimationNodeStateMachineTransition_4ni07"), "climb", "run", SubResource("AnimationNodeStateMachineTransition_l71n6"), "preclimb", "run", SubResource("AnimationNodeStateMachineTransition_i4ail"), "run", "preclimb", SubResource("AnimationNodeStateMachineTransition_a38lo")]
graph_offset = Vector2(20, 0.78379625)

[sub_resource type="Animation" id="Animation_g2els"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "climb"
length = 0.6
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"climb"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "crouch"
length = 0.2
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qhqgy"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "jump"
length = 0.5
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4r5pv"]
resource_name = "preclimb"
length = 0.4
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"preclimb"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3vyb7"]
resource_name = "run"
length = 0.3
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerAnimSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAnimSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2els"]
_data = {
&"RESET": SubResource("Animation_g2els"),
&"climb": SubResource("Animation_qlg0r"),
&"crouch": SubResource("Animation_tuyoq"),
&"idle": SubResource("Animation_qhqgy"),
&"jump": SubResource("Animation_dqkch"),
&"preclimb": SubResource("Animation_4r5pv"),
&"run": SubResource("Animation_3vyb7")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_g2els")
region = Rect2(480, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_g2els")
region = Rect2(400, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("3_tuyoq")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("4_dqkch")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("6_fjrip")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("5_qlg0r")
region = Rect2(0, 0, 80, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_g2els")
region = Rect2(80, 110, 80, 110)

[sub_resource type="SpriteFrames" id="SpriteFrames_3vyb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"preclimb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8vuu"]
size = Vector2(50, 85)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 23.0
height = 86.0

[node name="Player" type="CharacterBody2D" unique_id=1427791864]
script = ExtResource("1_g2els")

[node name="PlayerAnimTree" type="AnimationTree" parent="." unique_id=1463883985]
tree_root = SubResource("AnimationNodeStateMachine_g2els")
anim_player = NodePath("../PlayerAnim")
parameters/conditions/climb = false
parameters/conditions/crouch = false
parameters/conditions/idle = false
parameters/conditions/jump = false
parameters/conditions/preclimb = false
parameters/conditions/run = false
parameters/climb/blend_position = Vector2(0, 0)
parameters/crouch/blend_position = Vector2(0, 0)
parameters/idle/blend_position = Vector2(0, 0)
parameters/jump/blend_position = Vector2(0, 0)
parameters/preclimb/blend_position = Vector2(0, 0)
parameters/run/blend_position = Vector2(0, 0)

[node name="PlayerAnim" type="AnimationPlayer" parent="." unique_id=955102815]
libraries/ = SubResource("AnimationLibrary_g2els")

[node name="PlayerAnimSprite" type="AnimatedSprite2D" parent="." unique_id=529135131]
texture_filter = 1
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_3vyb7")
animation = &"run"

[node name="PlayerCollision" type="CollisionShape2D" parent="." unique_id=329315728]
position = Vector2(-1, -11)
shape = SubResource("RectangleShape2D_u8vuu")

[node name="Camera2D" type="Camera2D" parent="." unique_id=386315733]
zoom = Vector2(1.5, 1.5)
limit_left = -220
limit_right = 1375
limit_bottom = 425

[node name="DashTimer" type="Timer" parent="." unique_id=1313978511]
process_callback = 0
wait_time = 2.0

[node name="PlayerArea" type="Area2D" parent="." unique_id=1098829280]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea" unique_id=41575814]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_tuyoq")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="area_shape_entered" from="PlayerArea" to="." method="_on_player_area_area_shape_entered"]
[connection signal="area_shape_exited" from="PlayerArea" to="." method="_on_player_area_area_shape_exited"]
